# password-analyzer

./: .gitignore  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml
src/password_strength/: analyzer.py  entropy.py  rules.py
tests/: test_analyzer.py  test_entropy.py  test_rules.py
